7.2. Optional и Stream. Метод filter()